// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`css-macro tailwindcss plugin > dynamic apply case 6 > postcss 1`] = `
"
/* #ifdef H5||MP-WEIXIN */
    .apply-test {
        --tw-bg-opacity: 1;
        background-color: rgb(96 165 250 / var(--tw-bg-opacity))
    }
/* #endif */
/* #ifndef H5||MP-WEIXIN */
.apply-test {
        --tw-bg-opacity: 1;
        background-color: rgb(248 113 113 / var(--tw-bg-opacity))
    }
/* #endif */"
`;

exports[`css-macro tailwindcss plugin > dynamic apply case 6 > tw 1`] = `
"@media (weapp-tw-platform:\\"H5||MP-WEIXIN\\") {
    .apply-test {
        --tw-bg-opacity: 1;
        background-color: rgb(96 165 250 / var(--tw-bg-opacity))
    }
}
@media not screen and (weapp-tw-platform:\\"H5||MP-WEIXIN\\") {
    .apply-test {
        --tw-bg-opacity: 1;
        background-color: rgb(248 113 113 / var(--tw-bg-opacity))
    }
}"
`;

exports[`css-macro tailwindcss plugin > dynamic apply case 7 > postcss 1`] = `
"
/* #ifdef H5 || MP-WEIXIN */
    .apply-test {
        --tw-bg-opacity: 1;
        background-color: rgb(96 165 250 / var(--tw-bg-opacity))
    }
/* #endif */
/* #ifndef H5 || MP-WEIXIN */
.apply-test {
        --tw-bg-opacity: 1;
        background-color: rgb(248 113 113 / var(--tw-bg-opacity))
    }
/* #endif */"
`;

exports[`css-macro tailwindcss plugin > dynamic apply case 7 > tw 1`] = `
"@media (weapp-tw-platform:\\"H5_||_MP-WEIXIN\\") {
    .apply-test {
        --tw-bg-opacity: 1;
        background-color: rgb(96 165 250 / var(--tw-bg-opacity))
    }
}
@media not screen and (weapp-tw-platform:\\"H5_||_MP-WEIXIN\\") {
    .apply-test {
        --tw-bg-opacity: 1;
        background-color: rgb(248 113 113 / var(--tw-bg-opacity))
    }
}"
`;

exports[`css-macro tailwindcss plugin > dynamic apply case 8 > postcss 1`] = `
"
/* #ifdef H5\\\\_||\\\\_MP-WEIXIN */
    .apply-test {
        --tw-bg-opacity: 1;
        background-color: rgb(96 165 250 / var(--tw-bg-opacity))
    }
/* #endif */
/* #ifndef H5\\\\_||\\\\_MP-WEIXIN */
.apply-test {
        --tw-bg-opacity: 1;
        background-color: rgb(248 113 113 / var(--tw-bg-opacity))
    }
/* #endif */"
`;

exports[`css-macro tailwindcss plugin > dynamic apply case 8 > tw 1`] = `
"@media (weapp-tw-platform:\\"H5\\\\_||\\\\_MP-WEIXIN\\") {
    .apply-test {
        --tw-bg-opacity: 1;
        background-color: rgb(96 165 250 / var(--tw-bg-opacity))
    }
}
@media not screen and (weapp-tw-platform:\\"H5\\\\_||\\\\_MP-WEIXIN\\") {
    .apply-test {
        --tw-bg-opacity: 1;
        background-color: rgb(248 113 113 / var(--tw-bg-opacity))
    }
}"
`;

exports[`css-macro tailwindcss plugin > dynamic case 0 > postcss 1`] = `
"
/* #ifdef MP-WEIXIN */
    .ifdef-\\\\[MP-WEIXIN\\\\]\\\\:bg-blue-500 {
        --tw-bg-opacity: 1;
        background-color: rgb(59 130 246 / var(--tw-bg-opacity))
    }
/* #endif */"
`;

exports[`css-macro tailwindcss plugin > dynamic case 0 > tw 1`] = `
"@media (weapp-tw-platform:\\"MP-WEIXIN\\") {
    .ifdef-\\\\[MP-WEIXIN\\\\]\\\\:bg-blue-500 {
        --tw-bg-opacity: 1;
        background-color: rgb(59 130 246 / var(--tw-bg-opacity))
    }
}"
`;

exports[`css-macro tailwindcss plugin > dynamic case 1 > postcss 1`] = `
"
/* #ifndef MP-WEIXIN */
    .ifndef-\\\\[MP-WEIXIN\\\\]\\\\:bg-blue-500 {
        --tw-bg-opacity: 1;
        background-color: rgb(59 130 246 / var(--tw-bg-opacity))
    }
/* #endif */"
`;

exports[`css-macro tailwindcss plugin > dynamic case 1 > tw 1`] = `
"@media not screen and (weapp-tw-platform:\\"MP-WEIXIN\\") {
    .ifndef-\\\\[MP-WEIXIN\\\\]\\\\:bg-blue-500 {
        --tw-bg-opacity: 1;
        background-color: rgb(59 130 246 / var(--tw-bg-opacity))
    }
}"
`;

exports[`css-macro tailwindcss plugin > dynamic case 2 > postcss 1`] = `
"
/* #ifndef uniVersion>3.9 */
    .ifndef-\\\\[uniVersion\\\\>3\\\\.9\\\\]\\\\:bg-blue-500 {
        --tw-bg-opacity: 1;
        background-color: rgb(59 130 246 / var(--tw-bg-opacity))
    }
/* #endif */"
`;

exports[`css-macro tailwindcss plugin > dynamic case 2 > tw 1`] = `
"@media not screen and (weapp-tw-platform:\\"uniVersion>3.9\\") {
    .ifndef-\\\\[uniVersion\\\\>3\\\\.9\\\\]\\\\:bg-blue-500 {
        --tw-bg-opacity: 1;
        background-color: rgb(59 130 246 / var(--tw-bg-opacity))
    }
}"
`;

exports[`css-macro tailwindcss plugin > dynamic case 3 > postcss 1`] = `
"
/* #ifndef uniVersion > 3.9 */
    .ifndef-\\\\[uniVersion_\\\\>_3\\\\.9\\\\]\\\\:bg-blue-500 {
        --tw-bg-opacity: 1;
        background-color: rgb(59 130 246 / var(--tw-bg-opacity))
    }
/* #endif */"
`;

exports[`css-macro tailwindcss plugin > dynamic case 3 > tw 1`] = `
"@media not screen and (weapp-tw-platform:\\"uniVersion_>_3.9\\") {
    .ifndef-\\\\[uniVersion_\\\\>_3\\\\.9\\\\]\\\\:bg-blue-500 {
        --tw-bg-opacity: 1;
        background-color: rgb(59 130 246 / var(--tw-bg-opacity))
    }
}"
`;

exports[`css-macro tailwindcss plugin > dynamic case 4 > postcss 1`] = `
"
/* #ifndef uni\\\\_version > 3.9 */
    .ifndef-\\\\[uni\\\\\\\\_version_\\\\>_3\\\\.9\\\\]\\\\:bg-blue-500 {
        --tw-bg-opacity: 1;
        background-color: rgb(59 130 246 / var(--tw-bg-opacity))
    }
/* #endif */"
`;

exports[`css-macro tailwindcss plugin > dynamic case 4 > tw 1`] = `
"@media not screen and (weapp-tw-platform:\\"uni\\\\_version_>_3.9\\") {
    .ifndef-\\\\[uni\\\\\\\\_version_\\\\>_3\\\\.9\\\\]\\\\:bg-blue-500 {
        --tw-bg-opacity: 1;
        background-color: rgb(59 130 246 / var(--tw-bg-opacity))
    }
}"
`;

exports[`css-macro tailwindcss plugin > dynamic case 5 > postcss 1`] = `
"
/* #ifndef H5||MP-WEIXIN */
    .ifndef-\\\\[H5\\\\|\\\\|MP-WEIXIN\\\\]\\\\:bg-blue-500 {
        --tw-bg-opacity: 1;
        background-color: rgb(59 130 246 / var(--tw-bg-opacity))
    }
/* #endif */"
`;

exports[`css-macro tailwindcss plugin > dynamic case 5 > tw 1`] = `
"@media not screen and (weapp-tw-platform:\\"H5||MP-WEIXIN\\") {
    .ifndef-\\\\[H5\\\\|\\\\|MP-WEIXIN\\\\]\\\\:bg-blue-500 {
        --tw-bg-opacity: 1;
        background-color: rgb(59 130 246 / var(--tw-bg-opacity))
    }
}"
`;

exports[`css-macro tailwindcss plugin > fix comment eol case 0 > postcss 1`] = `
"/* #ifndef MP-WEIXIN */
   .-wxcbg-red-500 {
     --tw-bg-opacity: 1;
     background-color: rgb(239 68 68 / var(--tw-bg-opacity));
   }
   /* #endif */
   "
`;

exports[`css-macro tailwindcss plugin > postcss expand case 0 > postcss 1`] = `
"
/* #ifndef MP-WEIXIN */
      .-wxcbg-red-500 {
          --tw-bg-opacity: 1;
          background-color: rgb(239 68 68 / var(--tw-bg-opacity));
      }
/* #endif */"
`;

exports[`css-macro tailwindcss plugin > postcss expand case 1 > postcss 1`] = `
"
/* #ifndef MP-WEIXIN */
        .ifndef-_MP-WEIXIN_cbg-red-500 {
            --tw-bg-opacity: 1;
            background-color: rgb(239 68 68 / var(--tw-bg-opacity));
        }
/* #endif */"
`;

exports[`css-macro tailwindcss plugin > static case 0 > postcss 1`] = `
"
/* #ifdef MP-WEIXIN */
    .wx\\\\:bg-blue-500 {
        --tw-bg-opacity: 1;
        background-color: rgb(59 130 246 / var(--tw-bg-opacity))
    }
/* #endif */"
`;

exports[`css-macro tailwindcss plugin > static case 0 > tw 1`] = `
"@media (weapp-tw-platform:\\"MP-WEIXIN\\") {
    .wx\\\\:bg-blue-500 {
        --tw-bg-opacity: 1;
        background-color: rgb(59 130 246 / var(--tw-bg-opacity))
    }
}"
`;

exports[`css-macro tailwindcss plugin > static case 1 > postcss 1`] = `
"
/* #ifndef MP-WEIXIN */
    .-wx\\\\:bg-blue-500 {
        --tw-bg-opacity: 1;
        background-color: rgb(59 130 246 / var(--tw-bg-opacity))
    }
/* #endif */"
`;

exports[`css-macro tailwindcss plugin > static case 1 > tw 1`] = `
"@media not screen and (weapp-tw-platform:\\"MP-WEIXIN\\") {
    .-wx\\\\:bg-blue-500 {
        --tw-bg-opacity: 1;
        background-color: rgb(59 130 246 / var(--tw-bg-opacity))
    }
}"
`;

exports[`css-macro tailwindcss plugin > static case 2 > postcss 1`] = `
"
/* #ifdef uniVersion > 3.9 */
    .hv\\\\:bg-blue-500 {
        --tw-bg-opacity: 1;
        background-color: rgb(59 130 246 / var(--tw-bg-opacity))
    }
/* #endif */"
`;

exports[`css-macro tailwindcss plugin > static case 2 > tw 1`] = `
"@media (weapp-tw-platform:\\"uniVersion > 3.9\\") {
    .hv\\\\:bg-blue-500 {
        --tw-bg-opacity: 1;
        background-color: rgb(59 130 246 / var(--tw-bg-opacity))
    }
}"
`;

exports[`css-macro tailwindcss plugin > static case 3 > postcss 1`] = `
"
/* #ifdef H5 || MP-WEIXIN */
    .mv\\\\:bg-blue-500 {
        --tw-bg-opacity: 1;
        background-color: rgb(59 130 246 / var(--tw-bg-opacity))
    }
/* #endif */"
`;

exports[`css-macro tailwindcss plugin > static case 3 > tw 1`] = `
"@media (weapp-tw-platform:\\"H5 || MP-WEIXIN\\") {
    .mv\\\\:bg-blue-500 {
        --tw-bg-opacity: 1;
        background-color: rgb(59 130 246 / var(--tw-bg-opacity))
    }
}"
`;
